# signal-ai-chat-bot

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  config.example.json  config.json  docker-compose.yml  migrate_to_server.sh  pyproject.toml  rename_bot.sh  requirements.txt  setup-signal.sh  start.sh  stop.sh  sync_accounts.sh  update_accounts.sh  update_accounts_by_path.sh  update_avatar.sh
src/: agent.py  agent_executor.py  config.py  main.py  message_handler.py  prompts.py  user.py
