[project]
name = "signal-ai-chat-bot"
version = "0.1.0"
description = "AI-powered chatbot that integrates with Signal messenger, supporting Gemini and Claude models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "pillow>=10.0.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.40.0",
    "fal-client>=0.4.0",
    "rel>=0.4.9",
    "websocket-client>=1.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/piebro/signal-ai-chat-bot"
Repository = "https://github.com/piebro/signal-ai-chat-bot"
Issues = "https://github.com/piebro/signal-ai-chat-bot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
